--- a/src/main/resources/fxml/booksTab.fxml
+++ b/src/main/resources/fxml/booksTab.fxml
@@ -3,18 +3,21 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.books.api.controller.gui.BooksTabController">
-    <TableView fx:id="booksTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="1500.0">
+<AnchorPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.books.api.controller.gui.BooksTabController">
+    <TableView fx:id="booksTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+               minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1500.0" AnchorPane.topAnchor="0"
+               AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
         <columns>
-            <TableColumn fx:id="isbnColumn" prefWidth="75.0" text="isbn" />
-            <TableColumn fx:id="titleColumn" prefWidth="75.0" text="title" />
-            <TableColumn fx:id="subtitleColumn" prefWidth="75.0" text="subtitle" />
-            <TableColumn fx:id="bookRatingColumn" prefWidth="75.0" text="rating" />
-            <TableColumn fx:id="authorsColumn" prefWidth="75.0" text="authors" />
-            <TableColumn fx:id="categoriesColumn" prefWidth="75.0" text="categories" />
+            <TableColumn fx:id="isbnColumn" prefWidth="75.0" text="isbn"/>
+            <TableColumn fx:id="titleColumn" prefWidth="75.0" text="title"/>
+            <TableColumn fx:id="subtitleColumn" prefWidth="75.0" text="subtitle"/>
+            <TableColumn fx:id="bookRatingColumn" prefWidth="75.0" text="rating"/>
+            <TableColumn fx:id="authorsColumn" prefWidth="75.0" text="authors"/>
+            <TableColumn fx:id="categoriesColumn" prefWidth="75.0" text="categories"/>
         </columns>
         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
         </columnResizePolicy>
     </TableView>
 </AnchorPane>
